--- a/upload/uploadimg/templates/index.html
+++ b/upload/uploadimg/templates/index.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>upload imagae</title>
+  <title>Parkinson's detection</title>
 </head>
 <body>
-<p><h1>Django Uploading Images</h1></p>
-<p><h4>require: pip install Pillow</h4></p>
+<p><h1>Parkinson's detection draft v0</h1></p>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
    {{ form.as_p }}
@@ -18,8 +17,19 @@
 
 {% if img_obj %}
   <h3>Succesfully uploaded : {{img_obj.title}}</h3>
-  <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">
+  <img src="{{ img_obj.image.url}}" alt="image uploaded" style="max-height:300px">
+{% endif %}
+  
+{% if img_output %}
+  <h3>Output image:</h3>
+  {{img_output}}<br>
+  {% load static %} 
+  <img src="{% static '/newimage.jpg' %}" alt="image after detection" style="max-height:300px">
 {% endif %}
 
+  <h3>Imagine statica DEBUG:</h3>
+  {% load static %} 
+  <img src="{% static '/artif_intellig.jpeg' %}"alt="sintassi2" style="max-height:300px"\><br>
+  <img src="{% static '/newimage.jpg' %}"alt="sintassi2 file2" style="max-height:300px"\><br>
 </body>
 </html>
