--- a/upload/uploadimg/templates/index.html
+++ b/upload/uploadimg/templates/index.html
@@ -12,7 +12,7 @@
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
    {{ form.as_p }}
-  <button type="submit">Upload</button>
+  <button type="submit">Upload and Detection</button>
 </form>
 
 {% if img_obj %}
