--- a/upload/uploadimg/templates/index.html
+++ b/upload/uploadimg/templates/index.html
@@ -27,9 +27,8 @@
   <img src="{% static '/newimage.jpg' %}" alt="image after detection" style="max-height:300px">
 {% endif %}
 
-  <h3>Imagine statica DEBUG:</h3>
+  <h3>Immagine statica DEBUG:</h3>
   {% load static %} 
   <img src="{% static '/artif_intellig.jpeg' %}"alt="sintassi2" style="max-height:300px"\><br>
-  <img src="{% static '/newimage.jpg' %}"alt="sintassi2 file2" style="max-height:300px"\><br>
 </body>
 </html>
