switch to tensorflow 2

--- a/upload/uploadimg/templates/index.html
+++ b/upload/uploadimg/templates/index.html
@@ -26,11 +26,11 @@
   </style>
 </head>
 <body>
-<p><h1>Parkinson's detection draft v0</h1></p>
+<p><h1>Substantia Nigra segmentation with Neural Networks</h1></p>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
    {{ form.as_p }}
-  <button type="submit">Upload and Detection</button>
+  <button type="submit">Upload image</button>
 </form>
 
 <div class="row">
